<resources>
    <string name="app_name">Dicoding aplikasi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dasboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_finished">Finished</string>
    <string name="title_upcoming">Up Coming</string>
    <string name="title_favorite">Favorite</string>

    <!--    Bingkai-->

    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="location">Tempat</string>
    <string name="owner">Penyelenggara</string>
    <string name="colon">&#160; : &#160;</string>
    <string name="quota">Sisa Kuota</string>
    <string name="category">Kategori</string>
    <string name="beginTime">Dimulai</string>
    <string name="registrasi">Registrasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>